# PerSourceAntivirus

./: .gitignore  Directory.Build.props  Directory.Packages.props  PerSourceAntivirus.slnx  README.md  psav.runsettings
data/: domain-blocklist.txt  ip-blocklist.txt  known-malicious-hashes.txt
data/yara-rules/: default.yar
src/PerSourceAntivirus.Application/: DependencyInjection.cs  PerSourceAntivirus.Application.csproj
src/PerSourceAntivirus.Application/Scans/: FileScanService.cs  ScanSettings.cs
src/PerSourceAntivirus.BrowserExtension/: background.js  blocked.html  content.js  manifest.json  popup.html  popup.js
src/PerSourceAntivirus.Cli/: PerSourceAntivirus.Cli.csproj  Program.cs  appsettings.json
src/PerSourceAntivirus.Domain/Entities/: AdsStreamInfo.cs  AlertTriage.cs  AmsiBypassAlert.cs  AmsiScanEvent.cs  ApiCallSequenceAlert.cs  AppWhitelistEntry.cs  ArchiveEntryResult.cs  ArpSpoofingAlert.cs  AtomBombingAlert.cs  AutostartEntry.cs  BeaconingAnalysis.cs  BrowserCredentialAccessAlert.cs  BrowserExtensionFinding.cs  CfgViolationAlert.cs  ClipboardHijackAlert.cs  ComHijackAlert.cs  CustomIoc.cs  DgaAlert.cs  DirectSyscallAlert.cs  DnsQueryEvent.cs  EmailScanResult.cs  EmulationResult.cs  ExploitFinding.cs  FileActivityEvent.cs  FileMetadataAnalysisResult.cs  FilelessAlert.cs  FirmwareVariableSnapshot.cs  HashReputationResult.cs  HeapSprayAlert.cs  HeavensGateAlert.cs  HoneypotFile.cs  HypervisorDetectionResult.cs  Incident.cs  KernelPatchGuardAlert.cs  KeyloggerDetectionAlert.cs  LlmnrPoisoningAlert.cs  LolBinAlert.cs  MbrSnapshot.cs  MbrWriteAttemptAlert.cs  MemoryDumpResult.cs  (+59 more)
src/PerSourceAntivirus.Domain/Enums/: NetworkProtocol.cs  RansomwareEventType.cs  RansomwareSeverity.cs  RootkitFindingType.cs  ScriptType.cs  ThreatStatus.cs
src/PerSourceAntivirus.Driver/: CMakeLists.txt  NdisFilter.c  PerSourceAntivirus.Driver.c  PerSourceAntivirus.Driver.inf  PsavBootExecute.c  README.md
src/PerSourceAntivirus.Gui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PerSourceAntivirus.Gui.csproj  appsettings.json
src/PerSourceAntivirus.Gui/Services/: SafeModeScanScheduler.cs  ToastNotificationService.cs  TrayIconService.cs
src/PerSourceAntivirus.Gui/ViewModels/: AlertsViewModel.cs  DashboardViewModel.cs  ExclusionsViewModel.cs  HuntViewModel.cs  MainViewModel.cs  NotificationsViewModel.cs  QuarantineViewModel.cs  ReportsViewModel.cs  ScanProfilesViewModel.cs  SettingsViewModel.cs  SystemStatusViewModel.cs  ThreatsViewModel.cs  TimelineViewModel.cs  ViewModelBase.cs
src/PerSourceAntivirus.Gui/Views/: AlertsView.xaml  AlertsView.xaml.cs  DashboardView.xaml  DashboardView.xaml.cs  ExclusionsView.xaml  ExclusionsView.xaml.cs  HuntView.xaml  (+19 more)
src/PerSourceAntivirus.Infrastructure/: AssemblyInfo.cs  DependencyInjection.cs  PerSourceAntivirus.Infrastructure.csproj
tests/PerSourceAntivirus.Application.Tests/: PerSourceAntivirus.Application.Tests.csproj
tests/PerSourceAntivirus.Domain.Tests/: PerSourceAntivirus.Domain.Tests.csproj
tests/PerSourceAntivirus.Infrastructure.Tests/: PerSourceAntivirus.Infrastructure.Tests.csproj
(+609 files in other folders)
